# gqrx

./: CMakeLists.txt  Dockerfile  Dockerfile.arm  default.conf  gqrx.pro
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/applications/gqrx/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  receiver.cpp  receiver.h
src/qtgui/: CMakeLists.txt  audio_options.ui  demod_options.ui  dockaudio.ui  dockbookmarks.ui  dockfft.ui  dockinputctl.ui  dockrds.ui  dockrxopt.ui  ioconfig.cpp  ioconfig.h  ioconfig.ui  plotter.cpp  plotter.h
